# claude-orchestrator

./: .gitignore  .plan.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build.sh  index.html  package.json  pnpm-lock.yaml  release.sh  vite.config.ts
.claude/commands/: release.md
orchestrator-core/: Cargo.toml
orchestrator-core/src/: agent_manager.rs  commands.rs  db.rs  file_watcher.rs  ingest.rs  lib.rs  pty_manager.rs  signal_watcher.rs  utils.rs
orchestrator-server/: Cargo.toml
orchestrator-server/src/: lib.rs  main.rs  ws_handler.rs
src/: App.tsx  index.css  main.tsx  router.ts  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: agent-bridge-codex.mjs  agent-bridge-opencode.bundle.mjs  agent-bridge-opencode.mjs  agent-bridge.bundle.mjs  agent-bridge.mjs  bridge-utils.mjs  mcp-server.bundle.mjs  mcp-server.mjs  title-server.bundle.mjs  title-server.mjs
src-tauri/src/: agent_manager.rs  clipboard_image.rs  db.rs  file_watcher.rs  lib.rs  pty_manager.rs  signal_watcher.rs
src/components/: ActivityBar.tsx  AgentChat.tsx  CommandPalette.tsx  CommitModal.tsx  ContextMenu.tsx  ContextPieChart.tsx  ContextRail.tsx  DiffViewer.tsx  ErrorBoundary.tsx  FileDiffModal.tsx  FileEditor.tsx  FileIcon.tsx  FilePickerModal.tsx  GitPanel.tsx  ImageStrip.tsx  NewSessionPanel.tsx  OverviewDashboard.tsx  PRPanel.tsx  PRReviewView.tsx  PullToRefresh.tsx  SessionConversation.tsx  SessionStatusBadge.tsx  SessionTab.tsx  SessionTranscript.tsx  Sidebar.tsx  Terminal.tsx  TitleBar.tsx  Toast.tsx  UsageChart.tsx  UsagePanel.tsx  WorkspaceCard.tsx
src/components/chat/: AgentChat.tsx  InlineCommandBar.tsx  OpenFileContext.tsx  constants.ts  types.ts
src/contexts/: SessionContext.tsx
src/hooks/: useAppVisible.ts  useBackgroundNotifications.ts  useBridgeConnection.ts  useClipboard.ts  useConversationTitles.ts  useMobileLayout.ts  useSession.ts  useSessionUsage.ts  useShellProcessStatus.ts  useUpdater.ts  useWorktreeBranches.ts
src/lib/: bridge.ts  diffRendering.ts  lruCache.ts  nativeApi.ts  turnDiffTree.ts
src/routes/: __root.tsx
src/utils/: notificationSound.ts  oneDarkHighlight.ts  sessionLineage.ts  workspaces.ts
(+66 files in other folders)
