[package]
name = "orchestrator-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
tempfile = "3"
notify = { version = "7", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"
regex = "1"
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSDockTile"] }
objc2-foundation = "0.3"
