[package]
name = "orchestrator-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "orchestrator-server"
path = "src/main.rs"

[dependencies]
orchestrator-core = { path = "../orchestrator-core" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "fs"] }
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
