[package]
name = "claude-orchestrator"
version = "0.1.4"
description = "Claude Session Manager"
authors = ["you"]
license = "MIT"
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
tempfile = "3"
notify = { version = "7", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"
regex = "1"
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
tauri-plugin-notification = "2"
reqwest = { version = "0.12", features = ["json", "blocking"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSDockTile"] }
objc2-foundation = "0.3"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

